--- a/robotarm/code/app/templates/index.html
+++ b/robotarm/code/app/templates/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div class="Container" >
-  <form id="robotarmdata" action="{{ url_for('indexPost') }}" method="POST">
+  <form id="robotarmdata" action="{{ url_for('index') }}" method="POST">
     <font size = 2 id = "slider_value_view">{{ value }}</font>						  
-    <input style = "width:50%;" id="slider_range" type="range" value="{{ vaule }}" min="3" max="12" onchange="sendValue()"></input><br />
+    <input style = "width:50%;" id="slider_range" name="slider" type="range" value="{{ value }}" min="3" max="12" onchange="sendValue()"></input><br />
   </form>
 </div>
 </body>
