[add] add setMotorValue function

--- a/server_on_nodejs/public/css/index.css
+++ b/server_on_nodejs/public/css/index.css
@@ -100,8 +100,9 @@ body {
 }
 
 .robotArmTable {
-  display: block;
+  display: flex;
   width: 700px;
+  flex-direction: column;
 }
 
 .motorNumber {
