--- a/server_on_nodejs/public/css/index.css
+++ b/server_on_nodejs/public/css/index.css
@@ -126,3 +126,22 @@ body {
     transform: scale(1.2);
   }
 }
+
+.robotArmRefresh {
+  display: flex;
+  background: radial-gradient(#fdfbfb 0%, #ebedee 100%);
+  width: 30px;
+  height: 30px;
+  margin-left: 30px;
+  cursor: pointer;
+  border-radius: 15px;
+  box-shadow: 0px 3px 3px;
+}
+
+.robotArmRefresh:hover {
+  opacity: 0.5;
+}
+
+.robotArmRefresh:active {
+  transform: scale(0.9);
+}
