--- a/server_on_nodejs/public/css/index.css
+++ b/server_on_nodejs/public/css/index.css
@@ -136,6 +136,7 @@ body {
   cursor: pointer;
   border-radius: 15px;
   box-shadow: 0px 3px 3px;
+  align-items: center;
 }
 
 .robotArmRefresh:hover {
@@ -144,4 +145,11 @@ body {
 
 .robotArmRefresh:active {
   transform: scale(0.9);
+}
+
+.refreshImg {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  margin: auto;
 }
